--- a/login.html
+++ b/login.html
@@ -49,7 +49,7 @@
                             <a href="#" class="password-recover">Esqueci minha senha</a>
                             <div class="btn-form">
                                 <button type="submit">Entrar</button>
-                                <a href="./home.html">Voltar</a>
+                                <a href="./index.html">Voltar</a>
                             </div>
                         </form>
                     </div>
