--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- icones -->
-    <link rel="stylesheet" href="../2_teste/fonts/tw-icons/css/treinaweb-icons.css">
+    <link rel="stylesheet" href="../fonts/tw-icons/css/treinaweb-icons.css">
     <!-- fonte -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,7 +43,7 @@
                         <a href="./login.html" class="btn-contained">Encontrar uma diarista</a>
                     </div>
                     <div class="principal-image">
-                        <img src="img/diarista-topo.png" alt="imagem ilustrativa de diarista">
+                        <img src="img/img/diarista-topo.png" alt="imagem ilustrativa de diarista">
                     </div>
                 </div>
 
