--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <a href="./login.html" class="btn-contained">Encontrar uma diarista</a>
                     </div>
                     <div class="principal-image">
-                        <img src="img/img/diarista-topo.png" alt="imagem ilustrativa de diarista">
+                        <img src="img/diarista-topo.png" alt="imagem ilustrativa de diarista">
                     </div>
                 </div>
 
